--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
     <div class="container">
         <div class="d-flex align-items-center">
-            <a class="navbar-brand mr-3" href="index.html">MUHAMAD LUTHFIAN</a>
+            <a class="navbar-brand mr-3" href="index.html">UMAR BIN KHATAB</a>
             
             <div class="nav-social-icons d-flex align-items-center">
                 <a href="mailto:diputviean109@gmail.com" class="nav-link-icon"><i class="fa fa-envelope"></i></a>
