--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
     <div class="container">
         <div class="d-flex align-items-center">
-            <a class="navbar-brand mr-3" href="index.html">UMAR BIN KHATAB</a>
+            <a class="navbar-brand mr-3" href="index.html">MUHAMAD LUTHFIAN</a>
             
             <div class="nav-social-icons d-flex align-items-center">
                 <a href="mailto:diputviean109@gmail.com" class="nav-link-icon"><i class="fa fa-envelope"></i></a>
@@ -494,7 +494,7 @@
                 margin-bottom: 10px;
             }
             .skill-header h3 {
-                font-size: 16px;
+                font-size: 20px;
                 font-weight: 600;
                 margin-bottom: 0;
                 color: #fff;
@@ -504,8 +504,8 @@
                 gap: 8px;
             }
             .skill-logos-inline img {
-                width: 22px;
-                height: 22px;
+                width: 26px;
+                height: 50px;
                 object-fit: contain;
                 transition: transform 0.3s;
                 filter: drop-shadow(0px 2px 4px rgba(0,0,0,0.3));
@@ -532,16 +532,16 @@
                         <h3>Web Development</h3>
                         <div class="skill-logos-inline">
                             <img src="images/js.png" alt="JS">
-                            <img src="images/logo-ai.png" alt="AI">
-                            <img src="images/logo-figma.png" alt="Figma">
-                            <img src="images/logo-canva.png" alt="Canva">
-                            <img src="images/logo-lr.png" alt="LR">
+                            <img src="images/css.png" alt="CSS">
+                            <img src="images/html.png" alt="HTML">
+                            <img src="images/php.png" alt="PHP">
+                            <img src="images/java.svg" alt="JAVA">
                         </div>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="90"
+                        <div class="progress-bar" role="progressbar" aria-valuenow="80"
                         aria-valuemin="0" aria-valuemax="100" style="width:90%">
-                            <span>90%</span>
+                            <span>80%</span>
                         </div>
                     </div>
                 </div>
@@ -550,19 +550,61 @@
             <div class="col-md-6 animate-box">
                 <div class="progress-wrap ftco-animate">
                     <div class="skill-header">
-                        <h3>HTML5</h3>
+                        <h3>Graphic Design & Visual Video</h3>
                         <div class="skill-logos-inline">
-                            <img src="images/logo-html.png" alt="HTML">
-                            <img src="images/logo-css.png" alt="CSS">
-                            <img src="images/logo-js.png" alt="JS">
-                            <img src="images/logo-bs.png" alt="Bootstrap">
-                            <img src="images/logo-sass.png" alt="Sass">
+                            <img src="images/pr.avif" alt="PR">
+                            <img src="images/ae.avif" alt="AE">
+                            <img src="images/ps.png" alt="PS">
+                            <img src="images/ai.png" alt="AI">
+                            <img src="images/au.png" alt="AU">
+                            <img src="images/an.png" alt="AN">
                         </div>
                     </div>
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuenow="95"
                             aria-valuemin="0" aria-valuemax="100" style="width:95%">
                             <span>95%</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 animate-box">
+                <div class="progress-wrap ftco-animate">
+                    <div class="skill-header">
+                        <h3>Frameworks</h3>
+                        <div class="skill-logos-inline">
+                            <img src="images/react.webp" alt="RC">
+                            <img src="images/spring.png" alt="SP">
+                            <img src="images/laravel.png" alt="LR">
+                            <img src="images/tailwind.png" alt="TW">
+                            <img src="images/nodejs.webp" alt="ND">
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="75"
+                            aria-valuemin="0" aria-valuemax="100" style="width:95%">
+                            <span>75%</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 animate-box">
+                <div class="progress-wrap ftco-animate">
+                    <div class="skill-header">
+                        <h3>Database</h3>
+                        <div class="skill-logos-inline">
+                            <img src="images/mysql.png" alt="sql">
+                            <img src="images/supa.png" alt="SP">
+                            <img src="images/mongodb.webp" alt="MG">
+                            <img src="images/postgre.svg" alt="PW">
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                            aria-valuemin="0" aria-valuemax="100" style="width:95%">
+                            <span>70%</span>
                         </div>
                     </div>
                 </div>
